Final Website for Lesson 3

--- a/Lesson3_Assignment/index.html
+++ b/Lesson3_Assignment/index.html
@@ -73,7 +73,7 @@
         <div class="headline">
             <div class="container">
                 <h2>Lesson 2 Highlights</h2>
-                <h3>INSERT YOUR NAME</h3>
+                <h3>Sarah Tripp</h3>
             </div>
         </div>
     </header>
@@ -85,33 +85,33 @@
 
         <!-- First Featurette -->
         <div class="featurette" id="about">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/CVCS.png">
             <h2 class="featurette-heading">Highlight #1
-                <span class="text-muted">Topic 1 Header</span>
+                <span class="text-muted">Centralized Version Control Systems</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">A centralized version control system is a server that has all the versions of a webpage, that is central to everyone who is working on it. This way, everyone knows what's going on, and administrators have a say on who is able to edit what. This biggest downside is that everyone is connected to one server, so if that server goes down, all of their versions go down as well. Also, if you keep all of the information on that one server, if it goes down, you lose everything, not just parts of it. </p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Second Featurette -->
         <div class="featurette" id="services">
-            <img class="featurette-image img-circle img-responsive pull-left" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-left" src="images/3commands.png">
             <h2 class="featurette-heading">Highlight #2
-                <span class="text-muted">Topic 2 Header</span>
+                <span class="text-muted">The 3 Stages of git Commands</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">The three main stages are <em>commited</em>, data is saved on your local database, <em>modified</em>, the file is modified but not commited to the database, and <em>staged</em>, which means that you've made sure that you want that file to be commited. The three main section are the repository, staging area and working directory. The repository stores all the screenshots and databases for your project, the staging area holds the information about which files you are going to commit, and the working directory is the area where you modify and use the files for the project.</p>
         </div>
 
         <hr class="featurette-divider">
 
         <!-- Third Featurette -->
         <div class="featurette" id="contact">
-            <img class="featurette-image img-circle img-responsive pull-right" src="http://placehold.it/500x500">
+            <img class="featurette-image img-circle img-responsive pull-right" src="images/DVCS.png" height="500px" width="500px">
             <h2 class="featurette-heading">Highlight #3
-                <span class="text-muted">Topic 3 Header</span>
+                <span class="text-muted">Distributed Version Control Systemsr</span>
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <p class="lead">Instead of looking at the last snapshots of the files, the people working on the project have different copies of the whole project on their local server. That way if a server is down, then they can just copy it from one of the other copies. This is a better system than a centralized version control system because then you have a much less chance of losing all of your work.</p>
         </div>
 
         <hr class="featurette-divider">
